@@ -1218,6 +1218,14 @@ DECL|field|dir
 name|Directory
 name|dir
 decl_stmt|;
+DECL|field|generation
+name|long
+name|generation
+decl_stmt|;
+DECL|field|version
+name|long
+name|version
+decl_stmt|;
 DECL|method|ReaderCommit
 name|ReaderCommit
 parameter_list|(
@@ -1311,6 +1319,20 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+name|version
+operator|=
+name|infos
+operator|.
+name|getVersion
+argument_list|()
+expr_stmt|;
+name|generation
+operator|=
+name|infos
+operator|.
+name|getGeneration
+argument_list|()
+expr_stmt|;
 block|}
 DECL|method|getSegmentsFileName
 specifier|public
@@ -1340,6 +1362,26 @@ parameter_list|()
 block|{
 return|return
 name|dir
+return|;
+block|}
+DECL|method|getVersion
+specifier|public
+name|long
+name|getVersion
+parameter_list|()
+block|{
+return|return
+name|version
+return|;
+block|}
+DECL|method|getGeneration
+specifier|public
+name|long
+name|getGeneration
+parameter_list|()
+block|{
+return|return
+name|generation
 return|;
 block|}
 block|}
