@@ -2263,6 +2263,14 @@ DECL|field|commitsToDelete
 name|Collection
 name|commitsToDelete
 decl_stmt|;
+DECL|field|version
+name|long
+name|version
+decl_stmt|;
+DECL|field|generation
+name|long
+name|generation
+decl_stmt|;
 DECL|method|CommitPoint
 specifier|public
 name|CommitPoint
@@ -2296,6 +2304,20 @@ operator|=
 name|segmentInfos
 operator|.
 name|getCurrentSegmentFileName
+argument_list|()
+expr_stmt|;
+name|version
+operator|=
+name|segmentInfos
+operator|.
+name|getVersion
+argument_list|()
+expr_stmt|;
+name|generation
+operator|=
+name|segmentInfos
+operator|.
+name|getGeneration
 argument_list|()
 expr_stmt|;
 name|int
@@ -2410,6 +2432,26 @@ parameter_list|()
 block|{
 return|return
 name|directory
+return|;
+block|}
+DECL|method|getVersion
+specifier|public
+name|long
+name|getVersion
+parameter_list|()
+block|{
+return|return
+name|version
+return|;
+block|}
+DECL|method|getGeneration
+specifier|public
+name|long
+name|getGeneration
+parameter_list|()
+block|{
+return|return
+name|generation
 return|;
 block|}
 comment|/**      * Called only be the deletion policy, to remove this      * commit point from the index.      */
