@@ -348,6 +348,32 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|getVersion
+specifier|public
+name|long
+name|getVersion
+parameter_list|()
+block|{
+return|return
+name|cp
+operator|.
+name|getVersion
+argument_list|()
+return|;
+block|}
+DECL|method|getGeneration
+specifier|public
+name|long
+name|getGeneration
+parameter_list|()
+block|{
+return|return
+name|cp
+operator|.
+name|getGeneration
+argument_list|()
+return|;
+block|}
 block|}
 DECL|method|wrapCommits
 specifier|private
