@@ -209,13 +209,10 @@ name|List
 name|commits
 parameter_list|)
 block|{
-name|long
-name|last
+specifier|final
+name|IndexCommit
+name|firstCommit
 init|=
-name|SegmentInfos
-operator|.
-name|generationFromSegmentsFileName
-argument_list|(
 operator|(
 operator|(
 name|IndexCommit
@@ -227,10 +224,37 @@ argument_list|(
 literal|0
 argument_list|)
 operator|)
+decl_stmt|;
+name|long
+name|last
+init|=
+name|SegmentInfos
+operator|.
+name|generationFromSegmentsFileName
+argument_list|(
+name|firstCommit
 operator|.
 name|getSegmentsFileName
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|last
+argument_list|,
+name|firstCommit
+operator|.
+name|getGeneration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|long
+name|lastVersion
+init|=
+name|firstCommit
+operator|.
+name|getVersion
+argument_list|()
 decl_stmt|;
 for|for
 control|(
@@ -250,13 +274,10 @@ name|i
 operator|++
 control|)
 block|{
-name|long
-name|now
+specifier|final
+name|IndexCommit
+name|commit
 init|=
-name|SegmentInfos
-operator|.
-name|generationFromSegmentsFileName
-argument_list|(
 operator|(
 operator|(
 name|IndexCommit
@@ -268,10 +289,27 @@ argument_list|(
 name|i
 argument_list|)
 operator|)
+decl_stmt|;
+name|long
+name|now
+init|=
+name|SegmentInfos
+operator|.
+name|generationFromSegmentsFileName
+argument_list|(
+name|commit
 operator|.
 name|getSegmentsFileName
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|long
+name|nowVersion
+init|=
+name|commit
+operator|.
+name|getVersion
+argument_list|()
 decl_stmt|;
 name|assertTrue
 argument_list|(
@@ -280,6 +318,25 @@ argument_list|,
 name|now
 operator|>
 name|last
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"SegmentInfos versions are out-of-order"
+argument_list|,
+name|nowVersion
+operator|>
+name|lastVersion
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|now
+argument_list|,
+name|commit
+operator|.
+name|getGeneration
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|last
